2008-08-04  Don Porter  <dgp@users.sourceforge.net>S

	* generic/tclExecute.c:	Stopped faulty double-logging of errors to
	* tests/execute.test:	stack trace when a compile epoch bump triggers
	fallback to direct evaluation of commands in a compiled script.
	[Bug 2037338]

2008-07-30  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c:	Corrected the timing of when the flag
	TCL_ALLOW_EXCEPTIONS is tested.

2008-07-29  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclExecute.c:  fix [Bug 2030670] that cause
	TclStackRealloc to panic on rare corner cases. Thx ajpasadyn for
	diagnose and patch.

2008-07-28  Andreas Kupries  <andreask@activestate.com>

	* generic/tclBasic.c: Added missing ref count when creating an
	empty string as path (TclEvalEx). In 8.4 the missing code caused
	panics in the testsuite. It doesn't in 8.5. I am guessing that the
	code path with the missing the incr-refcount is not invoked any
	longer. Because the bug in itself is certainly the same.

2008-07-25  Daniel Steffen  <das@users.sourceforge.net>

	* tests/info.test (info-37.0): Add !singleTestInterp constraint;
	(info-22.8, info-23.0): switch to glob matching to avoid sensitivity
	to tcltest.tcl line number changes, remove knownBug constraint, fix
	expected result. [Bug 1605269]

2008-07-25  Andreas Kupries  <andreask@activestate.com>

	* tests/info.test: Tests 38.* added, exactly testing the tracking
	of location for uplevel scripts.

	* generic/tclCompile.c (TclInitCompileEnv): Reorganized the
	initialization of the #280 location information to match the flow
	in TclEvalObjEx to get more absolute contexts.

	* generic/tclBasic.c (TclEvalObjEx): Moved the pure-list
	optimization out of the eval-direct code path to be done always,
	i.e. even when a compile is requested. This way we do not loose
	the association between #280 location information and the list
	elements, if any.

2008-07-23  Andreas Kupries  <andreask@activestate.com>
